CLEANFILES = *.py{c,o}

morituridir = $(PYTHONLIBDIR)/morituri/common

morituri_PYTHON = \
	__init__.py \
	accurip.py \
	checksum.py \
	cache.py \
	common.py \
	config.py \
	deps.py \
	directory.py \
	drive.py \
	encode.py \
	gstreamer.py \
	log.py \
	logcommand.py \
	mbngs.py \
	program.py \
	renamer.py \
	task.py
